cmake_minimum_required(VERSION 3.1)
add_subdirectory(QPanda.Core.test)
add_subdirectory(Variational.test)
add_subdirectory(Autodiff.test)
add_subdirectory(QProgTransform.test)
add_subdirectory(QProgTransformQuil.test)
add_subdirectory(QProgTransformBinary.test)
add_subdirectory(QVM.test)
add_subdirectory(ReadConfig.test)

if (CURL_FOUND)
    #add_subdirectory(CloudHttp.test)
endif (CURL_FOUND)
