cmake_minimum_required(VERSION 3.1)
project(Core.test)
file(GLOB_RECURSE CoreTestSrc ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
add_executable(${PROJECT_NAME} ${CoreTestSrc})
if (CURL_FOUND)
    target_link_libraries(${PROJECT_NAME} ${LIB_QPANDA} ${LIB_GTEST} ${CURL_LIBRARY} ${LIB_QALG})
else (CURL_FOUND)
    target_link_libraries(${PROJECT_NAME} ${LIB_QPANDA} ${LIB_GTEST} ${LIB_QALG})
endif (CURL_FOUND)

