cmake_minimum_required(VERSION 3.1)
project(Overall_scan.test)
file(GLOB_RECURSE OverallScanSrc ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
add_executable(${PROJECT_NAME} ${OverallScanSrc})
if (CURL_FOUND)
    target_link_libraries(${PROJECT_NAME} ${LIB_QPANDA} ${LIB_GTEST} ${CURL_LIBRARY} )
else (CURL_FOUND)
    target_link_libraries(${PROJECT_NAME} ${LIB_QPANDA} ${LIB_GTEST} )
endif (CURL_FOUND)

